syntax = "proto3";

package arduino;

option go_package = "github.com/arduino/arduino-cli/rpc";

import "common.proto";

message UploadReq {
    Instance instance = 1;
    string fqbn = 2;
    string sketch_path = 3;
	string port = 4;
	bool verbose = 5;
	bool verify = 6;
	string import_file = 7;
}

message UploadResp {
	bytes out_stream = 1;
	bytes err_stream = 2;
}